# lievik

./: .env.example  .gitignore  Dockerfile  Gemfile  LICENSE  Procfile.dev  README.md  package.json  pyproject.toml  run.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/components/: event_card_component.html.erb  event_card_component.rb
app/controllers/: activity_logs_controller.rb  api_tokens_controller.rb  application_controller.rb  channel_ai_chat_controller.rb  channel_contents_controller.rb  channel_events_controller.rb  channels_controller.rb  dashboard_controller.rb  events_controller.rb  manual_events_controller.rb  pages_controller.rb  pwa_controller.rb  rag_chat_controller.rb  sessions_controller.rb  sources_controller.rb  users_controller.rb
app/helpers/: application_helper.rb  nostr_content_helper.rb
app/jobs/: application_job.rb  cleanup_logs_job.rb  embed_events_job.rb  fetch_links_job.rb  nip46_auth_job.rb  nip46_supervisor_job.rb  rate_events_job.rb  (+5 more)
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  deploy.yml  lievik.yml  queue.yml  recurring.yml  routes.rb
db/: schema.rb
docs/: API.md  lievik-mcp-skill.md
lievik/: __init__.py  app.py  config.py  extensions.py  models.py  routes.py
public/: 404.html  500.html
scripts/: add_cypherpunk_source.py  cleanup_crew_and_content.py  display_nostr_events.py  init_db.py
spec/: rails_helper.rb
vibe_specs/: ARCHITECTURE.md  CREWAI.md  CUSTOMER_INTERVIEWS.MD  MYSQLPSQLRAG.md  NOSTR.md  POST_MVP_TASKS.md  PROJECT_PLAN.md  SPECIFICATION.md
(+191 files in other folders)
