[tool.poetry]
name = "lievik"
version = "0.1.0"
description = "Marketing Content Orchestrator"
authors = ["Juraj Bednar <juraj@bednar.io>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.1.1"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-login = "^0.6.3"
python-dotenv = "^1.1.0"
pymysql = "^1.1.1"
psycopg2-binary = "^2.9.10"
trafilatura = "^2.0.0"
nostr-sdk = "^0.42.1"
crewai = {extras = ["tools"], version = "^0.121.1"}
apscheduler = "^3.10.4"
langchain = "^0.3.25"
langchain-community = "^0.3.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
